# coffee-counter

./: README.md  data.xlsx  docker-compose.yml  nginx.conf
backend/: .gitignore  Dockerfile  README.md  pyproject.toml  sample.env
backend/src/: main.py  models.py  routes.py  xls.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: app.css  root.tsx
frontend/app/components/: Button.tsx  LoggedInUserCard.tsx  PageWrapper.tsx  UserCard.tsx
frontend/app/routes/: home.tsx
